# Pipe

./: README.md  pyproject.toml
.hypothesis/examples/bd3831718caeb459/: 57fe54329fda9199
pipe/: __init__.py
tests/: test_pipe.py
