[tool.poetry]
name = "pipe"
version = "0.1.0"
readme = "README.md"
description = "Pipe is for piping function calls"
authors = ["David Buckley <buckley.w.david@gmail.com>"]
homepage = "https://github.com/buckley-w-david/Pipe"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
hypothesis = "^3.76"
black = "^18.3-alpha.0"
pre-commit = "^1.11"
